--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 asgiref==3.4.1
 beautifulsoup4==4.10.0
+certifi==2021.10.8
+charset-normalizer==2.0.9
 dj-database-url==0.5.0
 Django==3.2.9
 django-bootstrap5==21.1
 django-environ==0.8.1
 django-heroku==0.3.1
 gunicorn==20.1.0
+idna==3.3
 Pillow==8.4.0
 psycopg2==2.9.2
 pytz==2021.3
+requests==2.26.0
 soupsieve==2.3.1
 sqlparse==0.4.2
+urllib3==1.26.7
 whitenoise==5.3.0
